--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11",
     "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3"
   }
 }
